
[TestExecHistoryView_Navigation - 1]
first_selected
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": false,
        "FilterQuery": "",
        "SortOrder": "Created ↓",
        "ItemCount": 1,
        "SelectedIndex": 0,
        "HasError": false
      }
    },
    {
      "Type": "*views.ResourceMenuView",
      "Data": {
        "Type": "ResourceMenuView",
        "Handle": "test-ws",
        "ItemCount": 6,
        "SelectedIdx": 0
      }
    }
  ]
}
---

[TestExecHistoryView_Navigation - 2]
second_selected
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": false,
        "FilterQuery": "",
        "SortOrder": "Created ↓",
        "ItemCount": 1,
        "SelectedIndex": 0,
        "HasError": false
      }
    },
    {
      "Type": "*views.ResourceMenuView",
      "Data": {
        "Type": "ResourceMenuView",
        "Handle": "test-ws",
        "ItemCount": 6,
        "SelectedIdx": 1
      }
    }
  ]
}
---

[TestExecHistoryView_Navigation - 3]
third_selected
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": false,
        "FilterQuery": "",
        "SortOrder": "Created ↓",
        "ItemCount": 1,
        "SelectedIndex": 0,
        "HasError": false
      }
    },
    {
      "Type": "*views.ResourceMenuView",
      "Data": {
        "Type": "ResourceMenuView",
        "Handle": "test-ws",
        "ItemCount": 6,
        "SelectedIdx": 2
      }
    }
  ]
}
---
